[gd_scene load_steps=15 format=3 uid="uid://tc65hxlvywy7"]

[ext_resource type="Script" path="res://Scripts/Menu.gd" id="1_178g5"]
[ext_resource type="Texture2D" uid="uid://bmq2yjmffh7ji" path="res://Sprites/SpaceExplorerLogo.png" id="2_2c4qv"]
[ext_resource type="PackedScene" uid="uid://ciqokxs6mt5ig" path="res://Prefabs/MenuButton.tscn" id="2_pg8rb"]
[ext_resource type="Texture2D" uid="uid://da348pkbxvyi6" path="res://Sprites/Arrow.png" id="4_l25v5"]
[ext_resource type="Script" path="res://Scripts/OptionButton.gd" id="4_pcmtk"]
[ext_resource type="FontFile" uid="uid://d1kywbr0fhlr4" path="res://Fonts/Pixel_NES.otf" id="4_pjal1"]
[ext_resource type="PackedScene" uid="uid://xxgg65u6crkj" path="res://Prefabs/CheatCode.tscn" id="7_gvxv8"]
[ext_resource type="AudioStream" uid="uid://c872qp5jhqooc" path="res://Audio/EnemyDefeat.wav" id="8_nnkmx"]

[sub_resource type="InputEventKey" id="InputEventKey_d7xlq"]
pressed = true
keycode = 4194320

[sub_resource type="InputEventKey" id="InputEventKey_4qwyj"]
keycode = 4194322

[sub_resource type="InputEventKey" id="InputEventKey_ebnv0"]
pressed = true
keycode = 4194319

[sub_resource type="InputEventKey" id="InputEventKey_3yvl2"]
pressed = true
keycode = 4194321

[sub_resource type="InputEventKey" id="InputEventKey_kib8e"]
device = -1
pressed = true
keycode = 90
unicode = 122

[sub_resource type="InputEventKey" id="InputEventKey_its2l"]
device = -1
pressed = true
keycode = 88
unicode = 120

[node name="MainMenu" type="Control" node_paths=PackedStringArray("cursorRect", "contentPages", "defaultButton", "optionVolume", "optionDifficulty")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_178g5")
cursorRect = NodePath("ArrowRect")
contentPages = [NodePath("MainSelection"), NodePath("Options"), NodePath("Controls")]
defaultButton = [NodePath("MainSelection/ButtonPlay"), NodePath("Options/ButtonBack"), NodePath("Controls/ButtonBack")]
optionVolume = NodePath("Options/ButtonVolume")
optionDifficulty = NodePath("Options/ButtonDifficulty")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="LogoRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -194.5
offset_top = 170.0
offset_right = 194.5
offset_bottom = 328.0
grow_horizontal = 2
scale = Vector2(2, 2)
pivot_offset = Vector2(194.5, 0)
texture = ExtResource("2_2c4qv")

[node name="ArrowRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 736.0
offset_top = 584.0
offset_right = 776.0
offset_bottom = 624.0
pivot_offset = Vector2(0, 20)
texture = ExtResource("4_l25v5")

[node name="MainSelection" type="VBoxContainer" parent="."]
visible = false
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 36.0
offset_right = 896.0
offset_bottom = 292.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonPlay" parent="MainSelection" instance=ExtResource("2_pg8rb")]
layout_mode = 2

[node name="ButtonOptions" parent="MainSelection" instance=ExtResource("2_pg8rb")]
layout_mode = 2
text = "OPTIONS"

[node name="ButtonControls" parent="MainSelection" instance=ExtResource("2_pg8rb")]
layout_mode = 2
text = "CONTROLS"

[node name="ButtonQuit" parent="MainSelection" instance=ExtResource("2_pg8rb")]
layout_mode = 2
text = "QUIT"

[node name="Options" type="VBoxContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 36.0
offset_right = 896.0
offset_bottom = 292.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="ButtonBack" parent="Options" instance=ExtResource("2_pg8rb")]
layout_mode = 2
text = "BACK"

[node name="ButtonVolume" parent="Options" node_paths=PackedStringArray("valueDisplay") instance=ExtResource("2_pg8rb")]
layout_mode = 2
text = "VOLUME:"
script = ExtResource("4_pcmtk")
restriction = 0
value = 80
valueMin = 0
valueMax = 100
valueIncrement = 10
valueDisplay = NodePath("VolumeValue")
valueDisplaySuffix = "%"
valueDisplayNames = Array[String]([])

[node name="VolumeValue" type="Label" parent="Options/ButtonVolume"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -60.0
offset_right = 256.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("4_pjal1")
theme_override_font_sizes/font_size = 48
text = "100%"
vertical_alignment = 1

[node name="ButtonDifficulty" parent="Options" node_paths=PackedStringArray("valueDisplay") instance=ExtResource("2_pg8rb")]
layout_mode = 2
text = "DIFFICULTY:"
script = ExtResource("4_pcmtk")
restriction = 1
value = 0
valueMin = 0
valueMax = 1
valueIncrement = 1
valueDisplay = NodePath("DifficultyValue")
valueDisplaySuffix = ""
valueDisplayNames = Array[String](["NORMAL", "HARD"])

[node name="DifficultyValue" type="Label" parent="Options/ButtonDifficulty"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -60.0
offset_right = 384.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("4_pjal1")
theme_override_font_sizes/font_size = 48
text = "NORMAL"
vertical_alignment = 1

[node name="Controls" type="VBoxContainer" parent="."]
visible = false
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 36.0
offset_right = 896.0
offset_bottom = 292.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="ButtonBack" parent="Controls" instance=ExtResource("2_pg8rb")]
layout_mode = 2
text = "BACK"

[node name="ControlLine1" type="Label" parent="Controls"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.705882, 0.705882, 0.705882, 1)
theme_override_fonts/font = ExtResource("4_pjal1")
theme_override_font_sizes/font_size = 48
text = "JUMP = X / SHOOT = Z"
vertical_alignment = 1

[node name="ControlLine2" type="Label" parent="Controls"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.705882, 0.705882, 0.705882, 1)
theme_override_fonts/font = ExtResource("4_pjal1")
theme_override_font_sizes/font_size = 48
text = "MOVE = ARROW KEYS"
vertical_alignment = 1

[node name="ControlLine3" type="Label" parent="Controls"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.705882, 0.705882, 0.705882, 1)
theme_override_fonts/font = ExtResource("4_pjal1")
theme_override_font_sizes/font_size = 48
text = "PAUSE = ENTER KEY"
vertical_alignment = 1

[node name="Credits" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -512.0
offset_top = -128.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("4_pjal1")
theme_override_font_sizes/font_size = 48
text = "MADE BY EDUARDO KUMAGAI"
horizontal_alignment = 2
vertical_alignment = 2

[node name="HighScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -184.0
offset_right = 128.0
offset_bottom = -124.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("4_pjal1")
theme_override_font_sizes/font_size = 48
text = "HIGH SCORE:"
vertical_alignment = 1

[node name="HighScoreValue" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 128.0
offset_top = -184.0
offset_right = 640.0
offset_bottom = -124.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("4_pjal1")
theme_override_font_sizes/font_size = 48
text = "100000"
vertical_alignment = 1

[node name="CheatCodeLives" parent="." instance=ExtResource("7_gvxv8")]
code = Array[InputEventKey]([SubResource("InputEventKey_d7xlq"), SubResource("InputEventKey_d7xlq"), SubResource("InputEventKey_4qwyj"), SubResource("InputEventKey_4qwyj"), SubResource("InputEventKey_ebnv0"), SubResource("InputEventKey_3yvl2"), SubResource("InputEventKey_ebnv0"), SubResource("InputEventKey_3yvl2"), SubResource("InputEventKey_kib8e"), SubResource("InputEventKey_its2l")])

[node name="DeleteSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_nnkmx")
volume_db = -4.0

[connection signal="pressed" from="MainSelection/ButtonPlay" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="MainSelection/ButtonOptions" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="MainSelection/ButtonControls" to="." method="_on_button_controls_pressed"]
[connection signal="pressed" from="MainSelection/ButtonQuit" to="." method="_on_button_quit_pressed"]
[connection signal="pressed" from="Options/ButtonBack" to="." method="_on_button_options_back"]
[connection signal="pressed" from="Controls/ButtonBack" to="." method="_on_button_options_back"]
